// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Card Custom box shadow 1`] = `
.c0 {
  background-color: #ffffff;
  box-shadow: none;
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: visible;
}

<div
  className="c0"
  overflow="visible"
  width="100%"
/>
`;

exports[`Storyshots Card Default 1`] = `
.c0 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: visible;
}

<div
  className="c0"
  overflow="visible"
  width="100%"
/>
`;

exports[`Storyshots Card Floating 1`] = `
.c0 {
  background-color: #ffffff;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: visible;
}

<div
  className="c0"
  overflow="visible"
  width="100%"
/>
`;

exports[`Storyshots Card Floating with content (Empty State) and 560px width 1`] = `
.c2 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
  font-weight: inherit;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 > .thumbnail {
  margin-bottom: 24px;
}

.c1 > .description,
.c1 > .info {
  margin-top: 16px;
}

.c1 > .buttons {
  margin-top: 24px;
}

.c1 > .buttons > * {
  margin: 0 8px;
  display: inline;
}

.c1 > .icon {
  font-size: 72px;
  color: rgba(0,0,0,0.32);
}

.c0 {
  background-color: #ffffff;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 560px;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: visible;
}

<div
  className="c0"
  overflow="visible"
  width="560px"
>
  <div
    className="c1"
  >
    <noscript />
    <div
      className="title c2"
      fontWeight="title"
      size={24}
      type="#2f313a"
    >
      My Card Title
    </div>
    <div
      className="description c3"
      fontWeight="inherit"
      size={18}
      type="#59636f"
    >
      My card description
    </div>
  </div>
</div>
`;

exports[`Storyshots Card Floating with content and 40px padding and 1136px width 1`] = `
.c2 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
  font-weight: inherit;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 > .thumbnail {
  margin-bottom: 24px;
}

.c1 > .description,
.c1 > .info {
  margin-top: 16px;
}

.c1 > .buttons {
  margin-top: 24px;
}

.c1 > .buttons > * {
  margin: 0 8px;
  display: inline;
}

.c1 > .icon {
  font-size: 72px;
  color: rgba(0,0,0,0.32);
}

.c0 {
  background-color: #ffffff;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 1136px;
  padding: 40px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: visible;
}

<div
  className="c0"
  overflow="visible"
  width="1136px"
>
  <div
    className="c1"
  >
    <noscript />
    <div
      className="title c2"
      fontWeight="title"
      size={24}
      type="#2f313a"
    >
      My Card Title
    </div>
    <div
      className="description c3"
      fontWeight="inherit"
      size={18}
      type="#59636f"
    >
      My card description
    </div>
  </div>
</div>
`;

exports[`Storyshots Card Type Featured 1`] = `
.c0 {
  background-color: #3498db;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: visible;
}

<div
  className="c0"
  overflow="visible"
  type="FEATURED"
  width="100%"
/>
`;

exports[`Storyshots Card Type Featured with 300px width 1`] = `
.c0 {
  background-color: #3498db;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 300px;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: visible;
}

<div
  className="c0"
  overflow="visible"
  type="FEATURED"
  width="300px"
/>
`;

exports[`Storyshots Card Type Neutral 1`] = `
.c0 {
  background-color: #f6f8f9;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: visible;
}

<div
  className="c0"
  overflow="visible"
  type="NEUTRAL"
  width="100%"
/>
`;

exports[`Storyshots Card With content (footer and empty state) and 1136px width 1`] = `
.c8 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c8 i.margin-left {
  margin-left: 8px;
}

.c8 i.margin-right {
  margin-right: 8px;
}

.c8 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8 > a {
  color: inherit;
}

.c8:hover {
  color: #3498db;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
  font-weight: inherit;
}

.c7 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: inherit;
}

.c6 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 40px;
  min-height: 40px;
  width: 40px;
  height: 40px;
  overflow: hidden;
  border: solid 2px rgba(0,0,0,0.16);
  border-radius: 100%;
  background-image: url(https://crave-whatsgood-sandbox.imgix.net/businesses/32/inventory/8fae5d32-f6d4-47bb-8062-e4e85c47788b.png);
  background-size: cover;
  background-position: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 > .thumbnail {
  margin-bottom: 24px;
}

.c1 > .description,
.c1 > .info {
  margin-top: 16px;
}

.c1 > .buttons {
  margin-top: 24px;
}

.c1 > .buttons > * {
  margin: 0 8px;
  display: inline;
}

.c1 > .icon {
  font-size: 72px;
  color: rgba(0,0,0,0.32);
}

.c5 {
  font-family: Lato,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 .text {
  margin-bottom: 8px;
}

.c5 > .image {
  margin-right: 16px;
}

.c4 {
  font-family: Lato,sans-serif;
  background-color: #f6f8f9;
  border-top: solid 1px rgba(0,0,0,0.16);
  padding: 16px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  align: flex-end;
}

.c9 > * {
  margin-left: 16px;
}

.c0 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 1136px;
  padding: 0;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: visible;
}

<div
  className="c0"
  overflow="visible"
  width="1136px"
>
  <div
    className="c1"
  >
    <noscript />
    <div
      className="title c2"
      fontWeight="title"
      size={24}
      type="#2f313a"
    >
      My Card Title
    </div>
    <div
      className="description c3"
      fontWeight="inherit"
      size={18}
      type="#59636f"
    >
      My card description
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="helperContent c5"
      size={16}
    >
      <div
        className="image c6"
        size={40}
        src="https://crave-whatsgood-sandbox.imgix.net/businesses/32/inventory/8fae5d32-f6d4-47bb-8062-e4e85c47788b.png"
      />
      <div>
        <div
          className="text c7"
          fontWeight="inherit"
          size={16}
          type="#2f313a"
        >
          Have questions about account setup?
        </div>
        <div
          className="link c8"
          disabled={false}
          size={16}
          type="#59636f"
        >
          <a
            href="#"
          >
            Get support
          </a>
        </div>
      </div>
    </div>
    <div
      className="actionsContainer c9"
    />
  </div>
</div>
`;

exports[`Storyshots Card With overflowing content 1`] = `
.c3 {
  position: relative;
  display: inline-block;
}

.c3 .hit-area {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c3 .appear-enter {
  opacity: 0;
}

.c3 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c3 .appear-exit {
  opacity: 1;
}

.c3 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: 600;
}

.c1 .icon {
  display: inline-block;
  margin: 0 8px;
  cursor: pointer;
}

.c1 .icon:hover,
.c1 .hovered {
  color: #3498db;
}

.c0 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: visible;
}

<div
  className="c0"
  overflow="visible"
  width="100%"
>
  <div
    className="c1"
  >
    <div
      className="text  c2"
      fontWeight="title"
      size={16}
      type="#59636f"
    >
      Visible tooltip
      <div
        className="icon c3"
      >
        <div
          className="hit-area"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        />
        <i
          className="wg-question"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card With overflowing content hidden 1`] = `
.c3 {
  position: relative;
  display: inline-block;
}

.c3 .hit-area {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c3 .appear-enter {
  opacity: 0;
}

.c3 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c3 .appear-exit {
  opacity: 1;
}

.c3 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: 600;
}

.c1 .icon {
  display: inline-block;
  margin: 0 8px;
  cursor: pointer;
}

.c1 .icon:hover,
.c1 .hovered {
  color: #3498db;
}

.c0 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
}

<div
  className="c0"
  overflow="hidden"
  width="100%"
>
  <div
    className="c1"
  >
    <div
      className="text  c2"
      fontWeight="title"
      size={16}
      type="#59636f"
    >
      Overflowing tooltip not visible
      <div
        className="icon c3"
      >
        <div
          className="hit-area"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        />
        <i
          className="wg-question"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card extended style 1`] = `
.c1 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: visible;
}

.c0 {
  border: solid 4px green;
  border-radius: 32px;
  height: 100px;
  background: linear-gradient(to bottom,white 0%,lightskyblue 100%);
}

<div
  className="c0 c1"
  overflow="visible"
  width="100%"
/>
`;
